# krkr2

./: CMakeLists.txt  README.md  README_CN.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-android.yml  build-linux.yml  build-windows.yml  ci.yml  code-format-check.yml
cmake/: KrKr2Modules.cmake
cpp/core/: CMakeLists.txt
cpp/core/archive/: CMakeLists.txt
cpp/core/archive/7z/: 7zArchive.cpp  CMakeLists.txt
cpp/core/archive/tar/: CMakeLists.txt  TARArchive.cpp
cpp/core/archive/xp3/: CMakeLists.txt  XP3Archive.cpp  XP3Archive.h
cpp/core/archive/zip/: CMakeLists.txt  ZIPArchive.cpp
cpp/core/base/: CMakeLists.txt  MsgIntf.cpp  ScriptMgnIntf.cpp  StorageIntf.cpp  StorageIntf.h  TextStream.cpp  UtilStreams.cpp
cpp/core/base/impl/: EngineArchiveInit.cpp  EngineArchiveInit.h  FileBackendInit.cpp  LocalFileBackend.cpp  LocalFileBackend.h  MsgImpl.cpp  StorageImpl.cpp  StorageImpl.h
cpp/core/common/: TVPPlatform.h
cpp/core/environ/: Application.cpp  CMakeLists.txt  CocosFileBackend.cpp  CocosFileBackend.h  DialogBackend.cpp  DialogBackend.h  DumpSend.cpp  EnvironFileBackendInit.cpp  EnvironFileBackendInit.h  MobileFileBackend.cpp  MobileFileBackend.h  Platform.h
cpp/core/environ/apple/macos/: platform.mm
cpp/core/environ/cocos2d/: AppDelegate.cpp  AppDelegate.h  MainScene.cpp
cpp/core/environ/linux/: Platform.cpp
cpp/core/environ/ui/: BaseForm.cpp  BaseForm.h  FileSelectorForm.cpp  GameMainMenu.cpp  GlobalPreferenceForm.cpp  InGameMenuForm.cpp  IndividualPreferenceForm.cpp  MainFileSelectorForm.cpp  MessageBox.cpp  PreferenceForm.cpp  PreferenceForm.h  SelectListForm.cpp  SimpleMediaFilePlayer.cpp  TipsHelpForm.cpp  XP3RepackForm.cpp
cpp/core/environ/ui/csd/: CsdUIFactory.cpp  CsdUIFactory.h  CsdUILayout.h  CsdUIWidgets.cpp  CsdUIWidgets.h
cpp/core/environ/ui/extension/: UIExtension.cpp
cpp/core/environ/win32/: Platform.cpp
cpp/core/event/: CMakeLists.txt
cpp/core/event/impl/: EventImpl.cpp
cpp/core/io/: CMakeLists.txt  FileBackendRegistry.cpp  IFileBackend.cpp  IFileBackend.h  LocalFileStream.cpp  LocalFileStream.h  StdFileBackend.cpp  StdFileBackend.h
cpp/core/kag/: CMakeLists.txt
cpp/core/log/: CMakeLists.txt  SpdlogSink.cpp  SpdlogSink.h  TVPDialog.cpp  TVPDialog.h  TVPInitLog.cpp  TVPInitLog.h  TVPLog.cpp  TVPLog.h  TVPLogLevelConfig.cpp  TVPLogLevelConfig.h
cpp/core/movie/: CMakeLists.txt
cpp/core/movie/ffmpeg/: AEFactory.cpp  krffmpeg.cpp
cpp/core/msg/: CMakeLists.txt  MsgIntf.h  TVPError.h  TVPMessages.h  TVPVersion.h
cpp/core/msg/impl/: About.cpp  Error.cpp  MessageRegistry.cpp  Version.cpp
cpp/core/msg/script/: README.md  create_messages.py  messages.json
cpp/core/plugin/: CMakeLists.txt  PluginImpl.cpp
cpp/core/script/: CMakeLists.txt
cpp/core/sound/: CMakeLists.txt
cpp/core/sound/win32/: WaveImpl.cpp  WaveMixer.cpp  WaveMixerConverter.cpp  WaveMixerConverter.h  WaveMixerMiniaudio.cpp
cpp/core/storage/: CMakeLists.txt  ToolStorageInit.cpp  ToolStorageInit.h
cpp/core/storage/impl/: ArchiveBase.cpp  ArchiveFilename.cpp  ArchiveFilename.h  ArchiveRegistry.cpp  ArchiveRegistry.h  ArchiveStream.cpp  CreateStream.cpp  FileMedia.cpp  MemoryStream.cpp  StorageEngineAccess.h  StorageGlobals.cpp
cpp/core/storage/tool/: CMakeLists.txt  MemoryStreamMin.cpp  OpenArchiveMin.cpp  StorageUtilMin.cpp  ToolMsgMin.cpp
cpp/core/storage_min/: ArchiveBase.cpp  CMakeLists.txt  CreateStreamMin.cpp  OpenArchiveMin.cpp  ToolMsgMin.cpp  ToolRuntimeStubs.cpp
cpp/core/sysinit/: CMakeLists.txt  SysInitIntf.cpp
cpp/core/sysinit/impl/: SysInitImpl.cpp  SysInitImpl.h  SysInitProtectStub.cpp
cpp/core/tjs2/: CMakeLists.txt  tjsCompileControl.cpp  tjsConfig.cpp  tjsDateParser.cpp  tjsInterCodeExec.cpp  tjsInterCodeGen.cpp
cpp/core/utils/: CMakeLists.txt  DebugIntf.cpp
cpp/core/utils/impl/: ThreadImpl.cpp
cpp/core/visual/: CMakeLists.txt  FontImpl.cpp  LayerIntf.cpp  LayerIntf.h  PrerenderedFont.cpp  RenderManager.cpp
cpp/core/visual/impl/: BasicDrawDevice.cpp  BitmapBitsAlloc.cpp  BitmapInfomation.cpp  LayerBitmapImpl.cpp  VideoOvlImpl.cpp  WindowImpl.cpp
cpp/plugins/: CMakeLists.txt  EmotePlayer.cpp  TextRender.cpp
cpp/plugins/layerex_draw/: CMakeLists.txt
cpp/plugins/layerex_draw/blend2d/: LayerExDraw.cpp  LayerExDraw.hpp
cpp/plugins/motionplayer/: CMakeLists.txt  D3DAdaptor.cpp  D3DAdaptor.h  D3DEmoteModule.h  EmoteFileCore.cpp  EmoteFrame.cpp  EmoteGLBridge.cpp  EmoteGLBridge.h  EmoteInternal.cpp  EmoteInternal.h  EmoteMetadata.cpp  EmoteMotion.cpp  EmoteNode.cpp  EmotePhysics.cpp  EmotePlayer.cpp  EmotePlayer.h  EmoteTVPRenderer.cpp  EmoteTVPRenderer.h  EmoteTimeline.cpp  HitTestInternal.h  MotionNode.h  MotionNodeBridge.cpp  MotionTraceWeb.cpp  MotionTraceWeb.h  NodeTree.cpp  NodeTree.h  Player.h  PlayerCore.cpp  PlayerDrawDispatch.cpp  PlayerFrameProgress.cpp  PlayerInternal.h  PlayerLayerQuery.cpp  PlayerMotionLoad.cpp  PlayerRender.cpp  PlayerRenderExecute.cpp  PlayerRenderInternal.cpp  PlayerRenderInternal.h  PlayerRenderItems.cpp  PlayerRenderTargets.cpp  PlayerTimeline.cpp  (+22 more)
cpp/plugins/motionplayer/docs/: MOTIONPLAYER_API_GUIDE.md  MOTIONPLAYER_ARCHITECTURE.md  MOTIONPLAYER_DRAW_VISIBILITY.md  MOTIONPLAYER_HEAD_FACE_FIX.md  MOTIONPLAYER_MATRIX_PIPELINE.md  MOTIONPLAYER_PROGRESS.md  MOTIONPLAYER_PSB_STRUCT.md  MOTIONPLAYER_RENDER_TEST.md  MOTIONPLAYER_TEXTURE_WORLD_COORDS.md  MOTIONPLAYER_TVP_COORDINATES.md  MOTION_EMOTE_API_GUIDE.md  README.md  motionplayer-render-test-feasibility.md  progress-flow-comparison.md
docs/: CORE_LOG_UNIFICATION.md  CORE_MODULE_DECOUPLING.md  LAUNCH_LAYER.md  RUST_LAYER.md  UI_LAYER.md
docs/launch/: README.md  adapter.md  architecture.md  cli-parser.md  launch-config.md
docs/rust/: README.md  architecture.md  build.md  dependencies.md  ffi.md  migration.md
docs/ui/: README.md  architecture.md  bridge.md  migration.md  monorepo.md  rendering.md
scripts/: check_core_module_deps.py
tools/: CMakeLists.txt
tools/xp3/: CMakeLists.txt  main.cpp
tools/xp3/tool/: StdFileBackend.h  StorageStubs.cpp  ToolRuntimeStubs.cpp
vcpkg/triplets/: arm-android.cmake  (+3 more)
(+37 files in other folders)
